
examples_domain_deps = [libvirt_dep]

dommigrate_src = ['dommigrate.c']
dommigrate = executable(
  'dommigrate',
  dommigrate_src,
  dependencies: examples_domain_deps
)

domtop_src = ['domtop.c']
domtop = executable(
  'domtop',
  domtop_src,
  dependencies: examples_domain_deps
)

info1_src = ['info1.c']
info1 = executable(
  'info1',
  info1_src,
  dependencies: examples_domain_deps
)

rename_src = ['rename.c']
rename = executable(
  'rename',
  rename_src,
  dependencies: examples_domain_deps
)

suspend_src = ['suspend.c']
suspend = executable(
  'suspend',
  suspend_src,
  dependencies: examples_domain_deps
)
