
examples_misc_deps = [libvirt_dep]

hellolibvirt_src = ['hellolibvirt.c']
hellolibvirt = executable(
  'hellolibvirt',
  hellolibvirt_src,
  dependencies: examples_misc_deps
)

eventtest_src = ['event-test.c']
eventtest = executable(
  'event-test',
  eventtest_src,
  dependencies: examples_misc_deps
)

openauth_src = ['openauth.c']
openauth = executable(
  'openauth',
  openauth_src,
  dependencies: examples_misc_deps
)
