
examples_xml_storage_dir = examples_dir / 'xml' / 'storage'

storage_xml = ['pool-dir.xml',
		 'pool-logical.xml',
		 'vol-cow.xml',
		 'vol-qcow.xml',
		 'vol-sparse.xml',
		 'pool-fs.xml',
		 'pool-netfs.xml',
		 'vol-qcow2.xml',
		 'vol-raw.xml',
		 'vol-vmdk.xml']
install_data(storage_xml, install_dir: examples_xml_storage_dir)
