
examples_xml_test_dir = examples_dir / 'xml' / 'test'

test_xml = ['testdomfc4.xml',
	      'testnetdef.xml',
	      'testnodeinline.xml',
	      'testpool.xml',
	      'testdev.xml',
	      'testdomfv0.xml',
	      'testnetpriv.xml',
	      'testnode.xml',
              'testvol.xml']
install_data(test_xml, install_dir: examples_xml_test_dir)
